--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,8 @@ jobs:
           version: '>= 363.0.0'
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
+      - name: Setting authentication account
+        run: gcloud config set account ${{ secret.GCP_ACCOUNT }}
       - name: Fetching vm instances
         run: |
           gcloud compute instances list --project "wise-shell-330415" --zones "us-central1-a"
