--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
       - name: Setting authentication account
-        run: gcloud config set account ${{ secret.GCP_ACCOUNT }}
+        run: gcloud config set account ${{ secrets.GCP_ACCOUNT }}
       - name: Fetching vm instances
         run: |
           gcloud compute instances list --project "wise-shell-330415" --zones "us-central1-a"
