--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,8 @@ jobs:
           version: '>= 363.0.0'
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
+      - name: Activate authentication account
+        run: gcloud auth activate-service-account ${{ secrets.GCP_ACCOUNT }}
       - name: Setting authentication account
         run: gcloud config set account ${{ secrets.GCP_ACCOUNT }}
       - name: Fetching vm instances
