--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -11,7 +11,7 @@ jobs:
           id: create_output
           run: | 
             expr 3+7>test.txt
-            echo "a1=cat test.txt" >> "$GITHUB_OUTPUT"
+            echo "a1=$(cat test.txt)" >> "$GITHUB_OUTPUT"
         - name: Print output variable
           run: |
             echo  ${{ steps.create_output.outputs.a1 }}
