--- a/.github/workflows/openpr.yml
+++ b/.github/workflows/openpr.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          depth: 2
+          fetch-depth: 2
       - name: printing_diff
         shell: bash
         run: |
