--- a/.github/workflows/openpr.yml
+++ b/.github/workflows/openpr.yml
@@ -3,7 +3,9 @@ name: check pull request
 run-name: checking pull requset
 on:
   pull_request:    
-    types:  [closed]    
+    types:  [closed] 
+    paths:
+      - '.github/workflows/*'   
 jobs:
   check_file_merged:
     runs-on: ubuntu-latest
