--- a/.github/workflows/openpr.yml
+++ b/.github/workflows/openpr.yml
@@ -4,8 +4,8 @@ run-name: checking pull requset
 on:
   pull_request:    
     types:  [closed] 
-    paths:
-      - '.github/workflows/*'   
+    paths:  
+      - 'internallb/modules/*' 
 jobs:
   check_file_merged:
     runs-on: ubuntu-latest
