--- a/.github/workflows/codedownload.yml
+++ b/.github/workflows/codedownload.yml
@@ -13,8 +13,7 @@ jobs:
        shell: bash
        run: |
           echo "File List is.............."
-          #branch_name=$(git remote show origin | sed -n '/HEAD branch/s/.*: //p')
-          branch_name="abc"
+          branch_name=$(git remote show origin | sed -n '/HEAD branch/s/.*: //p')          
           echo $branch_name
           git checkout $branch_name
           git diff ^head head > filediff.txt
