--- a/.github/workflows/codedownload.yml
+++ b/.github/workflows/codedownload.yml
@@ -9,6 +9,7 @@ jobs:
        uses: actions/checkout@v3
        with:
           ref: 'master'
+          fetch-depth: 1
      - name: Getting file differences
        shell: bash
        run: |
