--- a/.github/workflows/codedownload.yml
+++ b/.github/workflows/codedownload.yml
@@ -9,11 +9,12 @@ jobs:
        uses: actions/checkout@v3
        with:
           ref: 'master'
-          fetch-depth: 1
+          fetch-depth: 0
      - name: Getting file differences
        shell: bash
        run: |
           echo "File List is.............."
+          echo "$GITHUB_WORKSPACE"
           branch_name=$(git remote show origin | sed -n '/HEAD branch/s/.*: //p')          
           echo $branch_name
           git checkout $branch_name
